--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "grunt-contrib-compass": "^1.0.1",
     "grunt-contrib-connect": "^0.9.0",
     "grunt-contrib-htmlmin": "^0.3.0",
+    "grunt-contrib-imagemin": "^0.9.2",
     "grunt-contrib-uglify": "^0.7.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-criticalcss": "^0.4.6"
