--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "grunt-contrib-imagemin": "^0.9.2",
     "grunt-contrib-uglify": "^0.7.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-criticalcss": "^0.4.6"
+    "grunt-criticalcss": "^0.4.6",
+    "grunt-newer": "^1.1.0"
   }
 }
