--- a/package.json
+++ b/package.json
@@ -21,13 +21,12 @@
   "homepage": "https://github.com/stuartsantos/website",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-browser-sync": "^2.0.0",
     "grunt-contrib-compass": "^1.0.1",
-    "grunt-contrib-connect": "^0.9.0",
     "grunt-contrib-htmlmin": "^0.3.0",
     "grunt-contrib-imagemin": "^0.9.2",
     "grunt-contrib-uglify": "^0.7.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-criticalcss": "^0.4.6",
     "grunt-newer": "^1.1.0"
   }
 }
