--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "grunt-contrib-imagemin": "^0.9.2",
     "grunt-contrib-uglify": "^0.7.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-critical": "^0.1.1",
     "grunt-newer": "^1.1.0"
   }
 }
