--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/stuartsantos/website",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-browser-sync": "^2.0.0",
     "grunt-contrib-compass": "^1.0.1",
     "grunt-contrib-connect": "^0.9.0",
     "grunt-contrib-htmlmin": "^0.3.0",
