--- a/other/.htaccess
+++ b/other/.htaccess
@@ -47,7 +47,7 @@ ExpiresDefault "access 1 month"
 </IfModule>
 AddDefaultCharset UTF-8
 
-RewriteEngine on 
-RewriteCond %{REQUEST_FILENAME} !-d 
-RewriteCond %{REQUEST_FILENAME}\.html -f 
-RewriteRule ^(.*)$ $1.html
+Options +MultiViews
+RewriteEngine On
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^([^\.]+)$ $1.html [NC,L]
