--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-criticalcss": "^0.5.0",
     "grunt-newer": "^1.1.0"
+  },
+  "dependencies": {
+    "update": "^0.7.4"
   }
 }
