updated htaccess to redirect .html ext to base urls and added canonical tag to homepage

--- a/other/.htaccess
+++ b/other/.htaccess
@@ -112,6 +112,9 @@ RewriteEngine On
 RewriteCond %{SERVER_PORT} 80 
 RewriteRule ^(.*)$ https://stuartsantos.com/$1 [R=301,L]
 
+RewriteCond %{THE_REQUEST} /([^.]+)\.html[\s?] [NC]
+RewriteRule ^ /%1 [R=301,L,NE]
+
 Options +MultiViews
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
